RESOLVED FIXED183689
Include CADisplayLink explicitly where needed, instead of all of CA
https://bugs.webkit.org/show_bug.cgi?id=183689
Summary Include CADisplayLink explicitly where needed, instead of all of CA
Tim Horton
Reported 2018-03-15 19:11:10 PDT
Include CADisplayLink explicitly where needed, instead of all of CA
Attachments
Patch (1.37 KB, patch)
2018-03-15 19:11 PDT, Tim Horton
no flags
Radar WebKit Bug Importer
Comment 1 2018-03-15 19:11:28 PDT
Tim Horton
Comment 2 2018-03-15 19:11:57 PDT
Wenson Hsieh
Comment 3 2018-03-15 19:22:41 PDT
Comment on attachment 335920 [details] Patch rs=me
WebKit Commit Bot
Comment 4 2018-03-15 19:57:46 PDT
Comment on attachment 335920 [details] Patch Clearing flags on attachment: 335920 Committed r229657: <https://trac.webkit.org/changeset/229657>
WebKit Commit Bot
Comment 5 2018-03-15 19:57:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.